--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
   "useWorkspaces": true,
-  "version": "0.0.0",
-  "packages": [
-    "packages/*"
-  ]
+  "version": "0.0.1",
+  "packages": ["packages/*"]
 }
