--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.13.2",
+    "node-sass": "^4.14.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,6 +24,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "lerna": "^6.0.1",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
