--- a/packages/sf-page-schema/package.json
+++ b/packages/sf-page-schema/package.json
@@ -17,6 +17,11 @@
     "test": "node ./__tests__/sf-page-schema.test.js"
   },
   "dependencies": {
-    "less": "^4.1.3"
+    "axios": "^1.1.3",
+    "element-ui": "^2.13.2",
+    "node-sass": "^4.14.1"
+  },
+  "devDependencies": {
+    "sass-loader": "^8.0.2"
   }
 }
