--- a/packages/sf-page-schema/package.json
+++ b/packages/sf-page-schema/package.json
@@ -18,10 +18,9 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "element-ui": "^2.13.2",
-    "node-sass": "^4.14.1"
+    "element-ui": "^2.13.2"
   },
   "devDependencies": {
-    "sass-loader": "^8.0.2"
+    "less-loader": "^7.3.0"
   }
 }
