--- a/packages/sf-page-schema/package.json
+++ b/packages/sf-page-schema/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "element-ui": "^2.13.2"
+    "element-ui": "^2.13.2",
+    "less": "^4.1.3"
   },
   "devDependencies": {
     "less-loader": "^7.3.0"
