--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
   "useWorkspaces": true,
-  "version": "0.0.3",
-  "packages": ["packages/*"]
+  "version": "0.0.4",
+  "packages": [
+    "packages/*"
+  ]
 }
