--- a/packages/sf-page-schema/package.json
+++ b/packages/sf-page-schema/package.json
@@ -19,9 +19,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "element-ui": "^2.13.2",
-    "less": "^4.1.3"
-  },
-  "devDependencies": {
+    "less": "^4.1.3",
     "less-loader": "^7.3.0"
   }
 }
